// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cancel enforcement notice withdrawal (Enforcement listed building) GET /cancel/enforcement-notice-withdrawal should render a document upload page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds top-errors-hook"></div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">LPA enforcement notice withdrawal</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <div class="govuk-grid-row pins-file-upload" data-next-page-url="/appeals-service/appeal-details/5624/cancel/enforcement-notice-withdrawal/check-details"
            data-form-id="1" data-case-id="5624" data-case-reference="APP/Q9999/D/21/351062"
            data-folder-id="123" data-document-type="lpaEnforcementNoticeWithdrawal"
            data-document-stage="cancellation" data-blob-storage-host="https://127.0.0.1:10000/devstoreaccount1"
            data-blob-storage-container="document-service-uploads" data-allowed-types="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
            data-formatted-allowed-types="PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF">
                <form method="POST" novalidate="novalidate" class="govuk-grid-column-two-thirds"
                data-filenames-in-folder="">
                    <div class="pins-file-upload__container">
                        <div class="govuk-body pins-file-upload__instructions"><span>Each file must be a PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF and smaller than 250MB.</span>
                            <br><span>The total size of your uploaded files must be smaller than 1GB.</span>
                        </div>
                        <div class="middle-errors-hook">
                            <h2 class="pins-file-upload__container-title">Upload enforcement notice withdrawal</h2>
                            <div class="pins-file-upload__upload">
                                <input class="display--none" id="upload-file-1" accept="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
                                type="file" name="files" value="Choose file" aria-controls="file-list-1"
                                multiple>
                                <div>
                                    <button type='button' class="pins-file-upload__button govuk-button--secondary"
                                    data-cy="upload-file-button" id="upload-file-button-1">Choose files</button><span class='govuk-body pins-file-upload__dropzone-text'>or drop files</span>
                                </div>
                            </div>
                            <div id="file-list-1">
                                <h2 class="display--sr-only" id="file-list-title-1">List of files to upload</h2>
                                <ul class="pins-file-upload__files-rows" aria-describedby="file-list-title-1"
                                aria-live="polite"></ul>
                            </div>
                        </div>
                    </div>
                    <div class="display--flex">
                        <button type="submit" class="govuk-button pins-file-upload__submit" data-module="govuk-button"
                        id="submit-button-1">Continue</button>
                        <div class="progress-hook"></div>
                    </div>
                </form>
            </div>
        </div>
    </div>
</main>"
`;

exports[`cancel enforcement notice withdrawal (Enforcement listed building) GET /cancel/enforcement-notice-withdrawal/check-details should render the check your answers page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and withdraw enforcement notice</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Why are you cancelling the appeal?</dt>
                    <dd                     class="govuk-summary-list__value">LPA has withdrawn the enforcement notice</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5624/cancel?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F5624%2Fcancel"
                            data-cy="change-cancellation-reason">Change<span class="govuk-visually-hidden"> cancellation reason</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> LPA enforcement notice withdrawal</dt>
                    <dd                     class="govuk-summary-list__value"><a class="govuk-link" href="/documents/APP/Q9999/D/21/351062/download-uncommitted/1/test-document.txt"
                        target="_blank">test-document.txt</a>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5624/cancel/enforcement-notice-withdrawal?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F5624%2Fcancel%2Fenforcement-notice-withdrawal"
                            data-cy="change-enforcement-notice-withdrawal-documents">Change<span class="govuk-visually-hidden"> LPA enforcement notice withdrawal documents</span></a>
                        </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-cy="preview-email-to-appellant">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                        </summary>
                        <div class="govuk-details__text">Appellant email preview</div>
                    </details>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-cy="preview-email-to-lpa">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                        </summary>
                        <div class="govuk-details__text">LPA email preview</div>
                    </details>
                </div>
            </div>
            <p id="enforcement-notice-withdrawal-hint" class="govuk-body govuk-!-margin-bottom-6">We will withdraw the enforcement notice and send an email to the relevant
                parties.</p>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button"
                        id="withdraw-enforcement-notice">Withdraw enforcement notice</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`cancel enforcement notice withdrawal (Enforcement listed building) POST /cancel/enforcement-notice-withdrawal should render a 500 error page if request body upload-info is in an incorrect format 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://intranet.planninginspectorate.gov.uk/task/report-it-problem/"
                class="govuk-link">Report an IT problem</a> if the problem continues.</p>
        </div>
    </div>
</main>"
`;

exports[`cancel enforcement notice withdrawal (Enforcement listed building) POST /cancel/enforcement-notice-withdrawal should render a 500 error page if upload-info is not present in the request body 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://intranet.planninginspectorate.gov.uk/task/report-it-problem/"
                class="govuk-link">Report an IT problem</a> if the problem continues.</p>
        </div>
    </div>
</main>"
`;

exports[`cancel enforcement notice withdrawal GET /cancel/enforcement-notice-withdrawal should render a document upload page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds top-errors-hook"></div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">LPA enforcement notice withdrawal</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <div class="govuk-grid-row pins-file-upload" data-next-page-url="/appeals-service/appeal-details/5623/cancel/enforcement-notice-withdrawal/check-details"
            data-form-id="1" data-case-id="5623" data-case-reference="APP/Q9999/D/21/351062"
            data-folder-id="123" data-document-type="lpaEnforcementNoticeWithdrawal"
            data-document-stage="cancellation" data-blob-storage-host="https://127.0.0.1:10000/devstoreaccount1"
            data-blob-storage-container="document-service-uploads" data-allowed-types="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
            data-formatted-allowed-types="PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF">
                <form method="POST" novalidate="novalidate" class="govuk-grid-column-two-thirds"
                data-filenames-in-folder="">
                    <div class="pins-file-upload__container">
                        <div class="govuk-body pins-file-upload__instructions"><span>Each file must be a PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF and smaller than 250MB.</span>
                            <br><span>The total size of your uploaded files must be smaller than 1GB.</span>
                        </div>
                        <div class="middle-errors-hook">
                            <h2 class="pins-file-upload__container-title">Upload enforcement notice withdrawal</h2>
                            <div class="pins-file-upload__upload">
                                <input class="display--none" id="upload-file-1" accept="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
                                type="file" name="files" value="Choose file" aria-controls="file-list-1"
                                multiple>
                                <div>
                                    <button type='button' class="pins-file-upload__button govuk-button--secondary"
                                    data-cy="upload-file-button" id="upload-file-button-1">Choose files</button><span class='govuk-body pins-file-upload__dropzone-text'>or drop files</span>
                                </div>
                            </div>
                            <div id="file-list-1">
                                <h2 class="display--sr-only" id="file-list-title-1">List of files to upload</h2>
                                <ul class="pins-file-upload__files-rows" aria-describedby="file-list-title-1"
                                aria-live="polite"></ul>
                            </div>
                        </div>
                    </div>
                    <div class="display--flex">
                        <button type="submit" class="govuk-button pins-file-upload__submit" data-module="govuk-button"
                        id="submit-button-1">Continue</button>
                        <div class="progress-hook"></div>
                    </div>
                </form>
            </div>
        </div>
    </div>
</main>"
`;

exports[`cancel enforcement notice withdrawal GET /cancel/enforcement-notice-withdrawal/check-details should render the check your answers page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and withdraw enforcement notice</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Why are you cancelling the appeal?</dt>
                    <dd                     class="govuk-summary-list__value">LPA has withdrawn the enforcement notice</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/cancel?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F5623%2Fcancel"
                            data-cy="change-cancellation-reason">Change<span class="govuk-visually-hidden"> cancellation reason</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> LPA enforcement notice withdrawal</dt>
                    <dd                     class="govuk-summary-list__value"><a class="govuk-link" href="/documents/APP/Q9999/D/21/351062/download-uncommitted/1/test-document.txt"
                        target="_blank">test-document.txt</a>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/cancel/enforcement-notice-withdrawal?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F5623%2Fcancel%2Fenforcement-notice-withdrawal"
                            data-cy="change-enforcement-notice-withdrawal-documents">Change<span class="govuk-visually-hidden"> LPA enforcement notice withdrawal documents</span></a>
                        </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-cy="preview-email-to-appellant">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                        </summary>
                        <div class="govuk-details__text">Appellant email preview</div>
                    </details>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-cy="preview-email-to-lpa">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                        </summary>
                        <div class="govuk-details__text">LPA email preview</div>
                    </details>
                </div>
            </div>
            <p id="enforcement-notice-withdrawal-hint" class="govuk-body govuk-!-margin-bottom-6">We will withdraw the enforcement notice and send an email to the relevant
                parties.</p>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button"
                        id="withdraw-enforcement-notice">Withdraw enforcement notice</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`cancel enforcement notice withdrawal POST /cancel/enforcement-notice-withdrawal should render a 500 error page if request body upload-info is in an incorrect format 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://intranet.planninginspectorate.gov.uk/task/report-it-problem/"
                class="govuk-link">Report an IT problem</a> if the problem continues.</p>
        </div>
    </div>
</main>"
`;

exports[`cancel enforcement notice withdrawal POST /cancel/enforcement-notice-withdrawal should render a 500 error page if upload-info is not present in the request body 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://intranet.planninginspectorate.gov.uk/task/report-it-problem/"
                class="govuk-link">Report an IT problem</a> if the problem continues.</p>
        </div>
    </div>
</main>"
`;
